--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,11 @@ jobs:
       - name: build
         working-directory: ./go_version
         run: make build-docker
+      - name: Automatic Releases
+        uses: marvinpinto/action-automatic-releases@v1.2.1
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          draft: true
+          files: |
+            ./go_version/bin/*
+          
